--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.5.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@reduxjs/toolkit": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
