--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.4",
-    "@reduxjs/toolkit": "^1.9.1"
+    "@reduxjs/toolkit": "^1.9.1",
+    "@splidejs/react-splide": "^0.7.12"
   },
   "scripts": {
     "start": "react-scripts start",
