--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.2.2",
     "firebase": "^9.15.0",
     "react": "^18.2.0",
+    "swiper": "^8.4.5",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
