--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.5.4",
+    "sweetalert2": "^11.7.0",
     "swiper": "^8.4.5",
     "web-vitals": "^2.1.4"
   },
